// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightMenu renders children correctly 1`] = `
<div>
  <nav
    className="countries-menu-list js-countries-menu-trigger"
  >
    <a
      className="countries-menu-list__item countries-menu-list__parent"
      onClick={[Function]}
    >
      <span>
        Uganda
      </span>
      <style
        jsx={true}
      >
        
            cursor: pointer;
          
      </style>
    </a>
  </nav>
  <nav
    className="countries-menu-list animated inactive"
  >
    <style
      jsx={true}
    >
      
          cursor: pointer;
        
    </style>
    <a
      className="countries-menu-list__item countries-menu-list__parent countries-menu-list__item--open js-countries-menu-trigger"
      href="#"
      onClick={[Function]}
    >
      Uganda
    </a>
    <a
      aria-hidden="true"
      className="countries-menu__profile countries-menu__link js-profile-item"
      title="View Uganda"
    >
      View
    </a>
    <div
      active={false}
    >
      Testing
    </div>
  </nav>
</div>
`;

exports[`SpotlightMenu renders correctly 1`] = `
<div>
  <nav
    className="countries-menu-list js-countries-menu-trigger"
  >
    <a
      className="countries-menu-list__item countries-menu-list__parent"
      onClick={[Function]}
    >
      <span>
        Uganda
      </span>
      <style
        jsx={true}
      >
        
            cursor: pointer;
          
      </style>
    </a>
  </nav>
  <nav
    className="countries-menu-list animated inactive"
  >
    <style
      jsx={true}
    >
      
          cursor: pointer;
        
    </style>
    <a
      className="countries-menu-list__item countries-menu-list__parent countries-menu-list__item--open js-countries-menu-trigger"
      href="#"
      onClick={[Function]}
    >
      Uganda
    </a>
    <a
      aria-hidden="true"
      className="countries-menu__profile countries-menu__link js-profile-item"
      title="View Uganda"
    >
      View
    </a>
  </nav>
</div>
`;
